--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -16,6 +16,8 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "no-param-reassign": "off",
+    "linebreak-style": "off",
     "no-console": "off",
     "import/prefer-default-export": "off",
     "class-methods-use-this": "off",
